--- a/index.html
+++ b/index.html
@@ -66,12 +66,11 @@
 <body>
 
   <ul class="topnav">
-    <li><a class="active" href="#home">Home</a></li>
-    <li><a href="#news">Client</a></li>
-    <li><a href="#contact">Project</a></li>
-    <li class="right"><a href="#about">About Us</a></li>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="clients.html">Clients</a></li>
+    <li><a href="projects.html">Projects</a></li>
   </ul>
-  <div>
+  <div><br>
       <h3>
           <center>
             <p>Welcome to</p>
