--- a/clients.html
+++ b/clients.html
@@ -108,7 +108,9 @@
                 <li><a href="addClients.html">Add Client</a></li>
             </ul>
         </div>
-    </div>
+    </div><br>
+    <h2>Client Details</h2>
+    <hr>
 
 
 
