--- a/addClients.html
+++ b/addClients.html
@@ -111,88 +111,36 @@
     </div><br>
 
 
-    <h2>Client Details</h2>
+    <h2>Add new client</h2>
     <hr>
 
 
 
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
-                    <div class="container">
-                        <h4><b>John Doe</b></h4>
-                        <p>+44 345 6654</p>
-                        <p>john@gmail.com</p>
-                        <p>taifa, Accra, Ghana</p>
-                    </div>
-                </div>
-
+        <form action="/action_page.php">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" class="form-control" id="name">
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
-                    <div class="container">
-                        <h4><b>John Erbynn</b></h4>
-                        <p>+44 345 6654</p>
-                        <p>john@gmail.com</p>
-                        <p>taifa, Accra, Ghana</p>
-                    </div>
-                </div>
+            <div class="form-group">
+                <label for="email">Email address:</label>
+                <input type="email" class="form-control" id="email">
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
-                    <div class="container">
-                        <h4><b>John Doe</b></h4>
-                        <p>+44 345 6654</p>
-                        <p>john@gmail.com</p>
-                        <p>taifa, Accra, Ghana</p>
-                    </div>
-                </div>
-
+            <div class="form-group">
+                <label for="tel">Telephone:</label>
+                <input type="tel" class="form-control" id="tel">
             </div>
-        </div><br>
-
-        <div class="row">
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
-                        <div class="container">
-                            <h4><b>John Erbynn</b></h4>
-                            <p>+44 345 6654</p>
-                            <p>john@gmail.com</p>
-                            <p>taifa, Accra, Ghana</p>
-                        </div>
-                    </div>
-    
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
-                        <div class="container">
-                            <h4><b>John Doe</b></h4>
-                            <p>+44 345 6654</p>
-                            <p>john@gmail.com</p>
-                            <p>taifa, Accra, Ghana</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
-                        <div class="container">
-                            <h4><b>John Doe</b></h4>
-                            <p>+44 345 6654</p>
-                            <p>john@gmail.com</p>
-                            <p>taifa, Accra, Ghana</p>
-                        </div>
-                    </div>
-    
-                </div>
-            </div><br>
-
+            <div class="form-group">
+                <label for="address">Address:</label>
+                <input type="test" class="form-control" id="address">
+            </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox"> Remember me
+                </label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
 
 
