--- a/clients.html
+++ b/clients.html
@@ -103,7 +103,7 @@
     <div><br>
         <div class="category-navbar">
             <ul>
-                <li><a href="clientsDetails.html">Client List</a></li>
+                <li><a href="clients.html">Client List</a></li>
                 <li><a href="clientsDetails.html">Client Details</a></li>
                 <li><a href="addClients.html">Add Client</a></li>
             </ul>
