--- a/projectsDetails.html
+++ b/projectsDetails.html
@@ -95,7 +95,7 @@
     <div><br>
         <div class="category-navbar">
                 <ul>
-                    <li><a class="active" href="projectDetails.html">Project Details</a></li>
+                    <li><a class="active" href="projectsDetails.html">Project Details</a></li>
                     <li><a href="#tchen">Add Project</a></li>
                 </ul>
         </div>
@@ -108,11 +108,6 @@
     </div>
 
 
-
-
-
-
-</body>
 
 
 
