footer stay at bttm

--- a/addClients.html
+++ b/addClients.html
@@ -146,21 +146,16 @@
 
 
 
-
-
-
-
-
-
-
-</body>
-
-
-
-
-<footer style="bottom: 0px">
-    <!-- <center>@ copyright</center> -->
-</footer>
+  <!-- <footer> -->
+        <div class="footer container-fluid p-3 text-center text-light bg-info"
+        style="background-color: #15324f !important;">
+        <div class="container" style="margin-top: 10px">
+            Turntable Management System &nbsp; | &nbsp;
+            Copyright &copy; 2019 &nbsp; <br>
+            <br>
+        </div>
+    </div>
+    <!-- </footer> -->
 
 
 
