--- a/projectsDetails.html
+++ b/projectsDetails.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+
+        
 
     <title>Hello, world!</title>
 
@@ -82,7 +85,9 @@
 }
     </style>
 </head>
+</div>
 
+</div>
 <body>
 <div>
         <ul class="topnav">
@@ -112,9 +117,16 @@
 
 
 
-<footer style="bottom: 0px">
-    <!-- <center>@ copyright</center> -->
-</footer>
+  <!-- <footer> -->
+        <div class="footer container-fluid p-3 text-center text-light bg-info"
+        style="background-color: #15324f !important;">
+        <div class="container" style="margin-top: 10px">
+            Turntable Management System &nbsp; | &nbsp;
+            Copyright &copy; 2019 &nbsp; <br>
+            <br>
+        </div>
+    </div>
+    <!-- </footer> -->
 
 
 
