--- a/addClients.html
+++ b/addClients.html
@@ -141,7 +141,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-    </div>
+    </div><br><br>
 
 
 
