--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
         float: none;
       }
     }
+    .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+ }
   </style>
 </head>
 
