--- a/projects.html
+++ b/projects.html
@@ -157,17 +157,16 @@
 
 
 
-    >
+
 
     <!-- <footer> -->
-    <div class="footer container-fluid p-3 text-center text-light bg-info"
-        style="background-color: #15324f !important;">
-        <div class="container" style="margin-top: 10px">
-            Turntable Management System &nbsp; | &nbsp;
-            Copyright &copy; 2019 &nbsp; <br>
-            <br>
+            <div class="footer container-fluid p-3 text-center text-light bg-info" style="background-color: #15324f !important;">
+            <div class="container" style="margin-top: 10px">
+                Turntable Management System &nbsp; | &nbsp;
+                Copyright &copy; 2019 &nbsp; <br>
+                <br>
+            </div>
         </div>
-    </div>
     <!-- </footer> -->
 
 
