project menu fine

--- a/addProjects.html
+++ b/addProjects.html
@@ -110,9 +110,9 @@
     <div><br>
         <div class="category-navbar">
             <ul>
-                <li><a href="clients.html">Client List</a></li>
-                <li><a href="clientsDetails.html">Client Details</a></li>
-                <li><a href="addClients.html">Add Client</a></li>
+                <li><a href="projects.html">Project List</a></li>
+                <li><a href="projectsDetails.html">Project Details</a></li>
+                <li><a href="addProjects.html">Add Project</a></li>
             </ul>
         </div>
     </div><br>
