--- a/projectsDetails.html
+++ b/projectsDetails.html
@@ -100,8 +100,9 @@
     <div><br>
         <div class="category-navbar">
                 <ul>
+                        <li><a class="active" href="projects.html">Project List</a></li>
                     <li><a class="active" href="projectsDetails.html">Project Details</a></li>
-                    <li><a href="#tchen">Add Project</a></li>
+                    <li><a href="addProjects.html">Add Project</a></li>
                 </ul>
         </div>
         
