--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,6 @@
             color: #404040;
             background-color: white;
         }
-        
     </style>
 </head>
 
@@ -105,6 +104,7 @@
     <div><br>
         <div class="category-navbar">
             <ul>
+                <li><a href="projects.html">Project List</a></li>
                 <li><a href="projectsDetails.html">Project Details</a></li>
                 <li><a href="addProjects.html">Add Project</a></li>
             </ul>
@@ -161,13 +161,14 @@
 
 
     <!-- <footer> -->
-            <div class="footer container-fluid p-3 text-center text-light bg-info" style="background-color: #15324f !important;">
-            <div class="container" style="margin-top: 10px">
-                Turntable Management System &nbsp; | &nbsp;
-                Copyright &copy; 2019 &nbsp; <br>
-                <br>
-            </div>
+    <div class="footer container-fluid p-3 text-center text-light bg-info"
+        style="background-color: #15324f !important;">
+        <div class="container" style="margin-top: 10px">
+            Turntable Management System &nbsp; | &nbsp;
+            Copyright &copy; 2019 &nbsp; <br>
+            <br>
         </div>
+    </div>
     <!-- </footer> -->
 
 
