--- a/clients.html
+++ b/clients.html
@@ -116,7 +116,7 @@
 
 
 
-    <div class="table-responsive"><br>
+    <div class="container table-responsive"><br>
         <table id="t01" class="table table-striped table-hover col-sm-12">
             <caption>Client list</caption>
             <tr row-span='4'>
