--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
     </div>
 
     <br>
-    <div id="project-list">
+    <div id="project-list" class="container">
         <table class="table table-striped center">
             <thead>
                 <tr>
@@ -153,7 +153,7 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </div><br>
 
 
 
