--- a/addClients.html
+++ b/addClients.html
@@ -116,7 +116,7 @@
 
 
 
-    <div class="container">
+    <div class="container" style="width: 60%;">
         <form action="/action_page.php">
             <div class="form-group">
                 <label for="name">Name:</label>
