--- a/addProjects.html
+++ b/addProjects.html
@@ -123,7 +123,7 @@
 
 
 
-    <div class="container">
+    <div class="container" style="width: 50%;">
         <form action="/action_page.php">
             <div class="form-group">
                 <label for="name">Name:</label>
