--- a/clientsDetails.html
+++ b/clientsDetails.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/clients.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <title>Hello, world!</title>
@@ -125,9 +126,9 @@
                     <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
                     <div class="container">
                         <h4><b>John Doe</b></h4>
-                        <p>+44 345 6654</p>
-                        <p>john@gmail.com</p>
-                        <p>taifa, Accra, Ghana</p>
+                        <p><i class="fa fa-phone"></i> &nbsp;+44 345 6654</p>
+                        <p><i class="fa fa-envelope-o"></i> &nbsp;john@gmail.com</p>
+                        <p><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; Taifa, Accra, Ghana</p>
                     </div>
                 </div>
 
@@ -137,9 +138,9 @@
                     <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
                     <div class="container">
                         <h4><b>John Erbynn</b></h4>
-                        <p>+44 345 6654</p>
-                        <p>john@gmail.com</p>
-                        <p>taifa, Accra, Ghana</p>
+                        <p><i class="fa fa-phone"></i> &nbsp;+44 345 6654</p>
+                        <p><i class="fa fa-envelope-o"></i> &nbsp;john@gmail.com</p>
+                        <p><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; Taifa, Accra, Ghana</p>
                     </div>
                 </div>
             </div>
@@ -148,9 +149,9 @@
                     <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
                     <div class="container">
                         <h4><b>John Doe</b></h4>
-                        <p>+44 345 6654</p>
-                        <p>john@gmail.com</p>
-                        <p>taifa, Accra, Ghana</p>
+                        <p><i class="fa fa-phone"></i> &nbsp;+44 345 6654</p>
+                        <p><i class="fa fa-envelope-o"></i> &nbsp;john@gmail.com</p>
+                        <p><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; Taifa, Accra, Ghana</p>
                     </div>
                 </div>
 
@@ -163,9 +164,9 @@
                         <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
                         <div class="container">
                             <h4><b>John Erbynn</b></h4>
-                            <p>+44 345 6654</p>
-                            <p>john@gmail.com</p>
-                            <p>taifa, Accra, Ghana</p>
+                            <p><i class="fa fa-phone"></i> &nbsp;+44 345 6654</p>
+                            <p><i class="fa fa-envelope-o"></i> &nbsp;john@gmail.com</p>
+                            <p><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; Taifa, Accra, Ghana</p>    
                         </div>
                     </div>
     
@@ -175,9 +176,9 @@
                         <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
                         <div class="container">
                             <h4><b>John Doe</b></h4>
-                            <p>+44 345 6654</p>
-                            <p>john@gmail.com</p>
-                            <p>taifa, Accra, Ghana</p>
+                            <p><i class="fa fa-phone"></i> &nbsp;+44 345 6654</p>
+                            <p><i class="fa fa-envelope-o"></i> &nbsp;john@gmail.com</p>
+                            <p><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; Taifa, Accra, Ghana</p>    
                         </div>
                     </div>
                 </div>
@@ -186,9 +187,9 @@
                         <img src="img/img_avatar.png" alt="Avatar" style="width:100%">
                         <div class="container">
                             <h4><b>John Doe</b></h4>
-                            <p>+44 345 6654</p>
-                            <p>john@gmail.com</p>
-                            <p>taifa, Accra, Ghana</p>
+                            <p><i class="fa fa-phone"></i> &nbsp;+44 345 6654</p>
+                        <p><i class="fa fa-envelope-o"></i> &nbsp;john@gmail.com</p>
+                        <p><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; Taifa, Accra, Ghana</p>
                         </div>
                     </div>
     
