--- a/projectsDetails.html
+++ b/projectsDetails.html
@@ -83,6 +83,15 @@
 	color: #404040;
 	background-color: white;
 }
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
     </style>
 </head>
 </div>
@@ -109,8 +118,24 @@
     </div>
 
 
-    <div><br>
+    <br><br><br>
+
+    <div>
             
+    <div class="card mb-3 container" style="max-width: 540px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/project.png" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">POJO</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
     </div>
 
 
