--- a/projects.html
+++ b/projects.html
@@ -89,6 +89,15 @@
             color: #404040;
             background-color: white;
         }
+        .footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
     </style>
 </head>
 
