--- a/projectsDetails.html
+++ b/projectsDetails.html
@@ -129,8 +129,9 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">POJO</h5>
+                  <h3 class="card-title">POJO</h3>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Client: <a href="clientsDetails.html">Johnny Pk Erbynn</a></p>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
