tabl class typo fixed

--- a/addProjects.html
+++ b/addProjects.html
@@ -118,8 +118,12 @@
     </div><br>
 
 
-    <h2>Add new project</h2>
+    <div class="container">
+            <h2>Add new project</h2>
+    </div>
     <hr>
+    <br>
+ 
 
 
 
