--- a/projects.html
+++ b/projects.html
@@ -136,28 +136,28 @@
                     <th scope="row">1</th>
                     <td>POJO</td>
                     <td>Plain Old Java Object</td>
-                    <td><a href="projectsDetails.html">Project details</a></td>
+                    <td><a href="projectsDetails.html">view details</a></td>
 
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td>tcms java</td>
                     <td>turntable client mgmnt system in java</td>
-                    <td><a href="projectsDetails.html">Project details</a></td>
+                    <td><a href="projectsDetails.html">view details</a></td>
 
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>tcms scala</td>
                     <td>turntabl project mgmt system in Scal</td>
-                    <td><a href="projectsDetails.html">Project details</a></td>
+                    <td><a href="projectsDetails.html">view details</a></td>
 
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>micro-services</td>
                     <td>project micro-service on heroku</td>
-                    <td><a href="projectsDetails.html">Project details</a></td>
+                    <td><a href="projectsDetails.html">view details</a></td>
 
                 </tr>
             </tbody>
