--- a/clients.html
+++ b/clients.html
@@ -116,7 +116,7 @@
 
 
 
-    <div class="container table-responsive"><br>
+    <div class="class="container table-responsive"><br>
         <table id="t01" class="table table-striped table-hover col-sm-12">
             <caption>Client list</caption>
             <tr row-span='4'>
@@ -129,7 +129,7 @@
 
             <tr>
                 <td>1</td>
-                <td>John Erbynn</td>
+                <td>John Erbynnn</td>
                 <td>me@turntabl.io</td>
                 <td>+233 55 347 2114</td>
                 <td>Norway, Taifa, Accra, Ghana</td>
